# Sidearm

./: .gitignore  .stignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  Dockerfile.linux-check  FIXES_2026-05-23.md  LICENSE  README.md  Razer.ahk  SECURITY.md  Sidearm.bat  build-linux.sh  build_portable.bat  build_portable.ps1  dev.bat  dev.ps1  dev.sh  index.html  knip.json  package-lock.json  package.json  review-findings.md  scan_log.ps1  sign.ps1  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml
dev/: hotspot-test.html
docs/: CONFIG-SCHEMA-V2.md  CONFIG-SCHEMA-V3.md  DEVICE-CATALOG.md  DEVICE-VERIFICATION-MATRIX.md  FRONTEND-BACKEND-CONTRACT.md  MIGRATION-NOTES-AHK.md  OPEN-ISSUES.md  PROJECT-BACKLOG.md  PROJECT-HANDOFF-2026-03-08.md  RUNTIME-PIPELINE.md  SEED-CONFIG-PLAN.md  SYSTEM-CONTEXT.md  UI-REDESIGN-TODO.md  research-hold-through-input-synthesis.md  ux-review.md  visual-redesign-mockup.html
docs/adr/: 0001-use-architecture-decision-records.md  0002-use-tauri-v2-react-rust-in-process-architecture.md  0003-use-control-based-domain-model-and-versioned-json-config.md  0004-use-hybrid-device-discovery-and-verification-flow.md
docs/plans/: 2026-03-11-decompose-god-component.md  2026-03-12-e2e-testing.md  2026-03-12-review-fixes.md  2026-03-12-ui-improvements.md  2026-03-12-ui-redesign.md  2026-03-13-hold-through.md  2026-03-14-encapsulation-rust-dedup.md  2026-03-14-features-tdd.md  2026-03-14-four-features-design.md  2026-03-14-four-features-plan.md  2026-03-14-refactor-dryup.md  2026-03-14-vite8-migration-research.md  research-competitors-2026.md  research-deps-2026.md  research-stack-2026.md
public/: hotspot-test.html  osd.html  osd.js
schemas/: AGENTS.md  config.v2.schema.json  config.v3.schema.json
src/: AGENTS.md  App.css  App.tsx  main.tsx  test-setup.ts
src-tauri/: AGENTS.md  Cargo.toml  build.rs  manifest.xml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  osd.json
src-tauri/icons/: icon.icns
src-tauri/resources/: Sidearm_profile.synapse4
src-tauri/resources/presets/: browser.json  media.json  vscode.json  windows.json
src-tauri/src/: admin_autostart.rs  backup.rs  capture_backend.rs  chord.rs  clipboard.rs  command_error.rs  config.rs  exe_icon.rs  executor.rs  hotkeys.rs  input_synthesis.rs  lib.rs  log_cleanup.rs  main.rs  paths.rs  recorder.rs  resolver.rs  runtime.rs  vk.rs  window_capture.rs
src-tauri/src/capture_backend/: AGENTS.md  linux.rs  mod.rs  windows.rs
src-tauri/src/platform/: AGENTS.md  mod.rs
src-tauri/src/platform/linux/: display.rs  mod.rs  shell.rs  window.rs
src-tauri/src/platform/windows/: display.rs  input.rs  mod.rs  shell.rs  window.rs
src-tauri/src/synapse_import/: AGENTS.md  format_v3.rs  format_v4.rs  macro_steps.rs  macro_xml.rs  makecode.rs  mapping.rs  merge.rs  mod.rs  types.rs
src/components/: AGENTS.md  ActionInspector.tsx  ActionPickerModal.tsx  AddControlModal.tsx  AppMappingModal.tsx  AssignmentsWorkspace.tsx  BackupList.tsx  CaptureControls.tsx  ChipEditor.tsx  CommandPalette.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  ContextMenu.tsx  ControlPropertiesPanel.tsx  DebugWorkspace.tsx  DeviceBar.tsx  DirectoryPathField.tsx  ErrorBoundary.tsx  ErrorModal.tsx  ExeIcon.tsx  ExeMatchField.tsx  ExecutablePathField.tsx  ExpertWorkspace.tsx  GenericDeviceView.tsx  LogPanel.tsx  MenuItemsEditor.tsx  MouseVisualization.tsx  MouseVisualizationSvg.tsx  PathField.tsx  PillTrack.tsx  PortableBadge.tsx  PortableMigrationDialog.tsx  PresetsModal.tsx  ProfileDropdown.tsx  ProfilesWorkspace.tsx  RunningProcessPicker.tsx  RuntimePanel.tsx  ServiceToolsPanel.tsx  SettingsWorkspace.tsx  ShortcutHelp.tsx  (+9 more)
src/components/action-picker/: AGENTS.md  ConditionsEditor.tsx  LaunchEditor.tsx  MediaKeyEditor.tsx  MouseActionEditor.tsx  ProfileSwitchEditor.tsx  SequenceStepEditor.test.tsx  SequenceStepEditor.tsx  ShortcutEditor.tsx  SignalCaptureField.tsx  TextSnippetEditor.tsx  TriggerModeEditor.tsx
src/components/mouse-visual/: HeatCount.tsx  LabelColumn.tsx  LayerPills.tsx  LegendCell.tsx  ViewTabPills.tsx
src/components/onboarding/: NagaIllustration.tsx  OnboardingWizard.tsx  onboarding.css
src/components/settings/: AdvancedSettings.tsx  AppSettings.tsx  BackupSettings.tsx  CornerPicker.tsx  NotificationSettings.tsx  ProfileSettings.tsx  SettingsShell.tsx  SnippetLibrarySettings.tsx  useAutostartStatus.ts
src/hooks/: AGENTS.md  useActionPicker.test.ts  useActionPicker.ts  useAppPersistence.test.ts  useAppPersistence.ts  useControlInteractions.test.ts  useControlInteractions.ts  useCssVars.test.ts  useCssVars.ts  useDismissable.ts  useListKeyboard.test.ts  useListKeyboard.ts  useLogPanel.edgecases.test.ts  useLogPanel.test.ts  useLogPanel.ts  useModalDismiss.test.ts  useModalDismiss.ts  useMouseVisualPanel.ts  useMouseVizPanel.ts  useRuntime.test.ts  useRuntime.ts  useVerification.test.ts  useVerification.ts
src/i18n/: AGENTS.md  index.ts
src/i18n/locales/: en.json  ru.json
src/lib/: AGENTS.md  action-helpers.edgecases.test.ts  action-helpers.test.ts  action-helpers.ts  action-picker-helpers.edgecases.test.ts  action-picker-helpers.test.ts  action-picker-helpers.ts  assertNever.ts  backend.ts  binding-transfer.test.ts  binding-transfer.ts  canon-guards.test.ts  command-palette-helpers.test.ts  command-palette-helpers.ts  config-editing.devices.test.ts  config-editing.edgecases.test.ts  config-editing.test.ts  config-editing.ts  config.ts  conflict-detection.edgecases.test.ts  conflict-detection.test.ts  conflict-detection.ts  constants.ts  edge-cases.test.ts  errors.test.ts  errors.ts  helpers.edgecases.test.ts  helpers.test.ts  helpers.ts  labels.edgecases.test.ts  labels.test.ts  labels.ts  menu-helpers.edgecases.test.ts  menu-helpers.test.ts  menu-helpers.ts  mouse-visual.test.ts  mouse-visual.ts  profile-transfer.ts  runtime.ts  snippet-transfer.ts  (+9 more)
src/lib/constants/: hotspots.ts  index.ts  types.ts  (+1 more)
tools/: import-synapse4.py
(+4 files in other folders)
