[package]
name = "sidearm"
version = "0.1.19"
description = "Desktop workflow studio for multi-button mice"
authors = ["User"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sidearm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.44", default-features = false }
tempfile = "3"
thiserror = "2"
png = "0.17"
base64 = "0.22"
regex = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
once_cell = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_UI_Accessibility",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
# Higher-level `windows` crate used only for the Task Scheduler COM client in
# `admin_autostart.rs`.  windows-sys 0.61 doesn't expose Win32_System_TaskScheduler,
# and the few interfaces we touch (ITaskService, ITaskFolder, IRegisteredTask)
# are vastly easier to use through `windows`' safe wrappers than raw FFI.
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_TaskScheduler",
  "Win32_System_Variant",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13", features = ["tokio"] }
arboard = { version = "3.6", features = ["wayland-data-control"] }
active-win-pos-rs = "0.9"

# Test-only: property-based testing harness (edge-case discovery). Compiled out
# of release builds — does not affect the shipped binary.
[dev-dependencies]
proptest = "1"

# Slim debug profile: keeps full debug info for our own code, but reduces
# dependency debug info to line tables only. This cuts target/debug/ size
# roughly in half without breaking backtraces or hampering debugging of
# project code. split-debuginfo = "packed" keeps PDBs separate on Windows
# so they can be deleted independently if needed.
[profile.dev]
split-debuginfo = "packed"

[profile.dev.package."*"]
debug = "line-tables-only"

# Release profile (FIXES P2-4): smaller binary + less unwinding machinery, which
# also shrinks the attack surface of an input-synthesis app.
# NOTE: `panic = "abort"` is deliberately NOT set. On a hook/worker panic the app
# runs `input_synthesis::release_all_modifiers` via `std::panic::catch_unwind`
# (lib.rs) to free stuck Ctrl/Alt/Shift; "abort" skips unwinding and would leave
# modifiers latched system-wide. `opt-level` is left at the default (3) so the
# keyboard/mouse hot-path hook latency is not traded away for size.
[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
